[tool.poetry]
name = "sg-identity"
version = "0.2.0"
description = "Hello PyPi"
authors = ["Soof Golan <pypi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sg_identity", format = "sdist"}]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
build = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
